# met-stripe-sidecar

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_subscription_mappings.py
docs/: architecture.md
src/sidecar/: __init__.py  db.py  logging.py  metronome_client.py  models.py  server.py  stripe_client.py  worker.py
src/sidecar/config/: __init__.py  tiers.py
src/sidecar/handlers/: __init__.py  customer.py  errors.py  subscription.py
src/sidecar/mappers/: __init__.py  customer.py  subscription.py
tests/: conftest.py  test_config_tiers.py  test_handlers_customer.py  test_handlers_subscription.py  test_mappers_customer.py  test_mappers_subscription.py  test_webhook_receiver.py
tests/fixtures/: stripe_customer_created.json  stripe_customer_subscription_created.json
