[project]
name = "stripe-metronome-sidecar"
version = "0.1.0"
description = "Sidecar service that syncs Stripe customer state into Metronome via Stripe webhooks."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Metronome" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    # psycopg2-binary is used only by Alembic for migrations (sync driver).
    # The app runtime speaks asyncpg.
    "psycopg2-binary>=2.9.10",
    "alembic>=1.13.3",
    "stripe>=11.1.0",
    "metronome-sdk>=4.0.0",
    "httpx>=0.27.0",
    "python-json-logger>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-python-dateutil",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# -----------------------------------------------------------------------------
# Tooling
# -----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E", "W", "I", "UP"]
"tests/*.py" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
plugins = []
# SQLAlchemy 2.x ships its own typing; no plugin needed.
# Third-party SDKs without complete stubs are tolerated below.

[[tool.mypy.overrides]]
module = [
    "metronome.*",
    "stripe.*",
    "pythonjsonlogger.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Bind both async fixtures and async tests to a single session-scoped event
# loop. The DB-backed tests share a session-scoped SQLAlchemy engine whose
# asyncpg connection pool is bound to the loop it was created in; without
# both knobs set, pytest-asyncio creates fresh loops per-test and the pool
# raises "got Future attached to a different loop" on Python ≥ 3.13.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-ra -q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
]
